edited .png image.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         </section>
       </article>
     </div>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by &nbsp
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
       >Frontend Mentor</a
-      >. Coded by &nbsp <a href="#">Your Name Here</a>.
-    </div>
+      >. Coded by &nbsp Jeff C.
+    </footer>
 
     </body>
 </html>
